# sana-tee

./: .gitignore  Cargo.toml  device.go  go.mod  sana.go  sana_unix.go  sana_window.go
cmd/tee/: main.go
pkg/sev/: sev.go  sev_test.go
pkg/sgx/: sgx_test.go
src/: error.rs  lib.rs
